<resources>
    <string name="app_name">Mtg_Project</string>
    <string name="title_activity_card_list">CardList</string>

    <string name="deck_name"></string>
    <string name="new_deck_name"></string>
    <string name="submit_deck_name">Submit</string>


    <string name="card_textview"></string>
    <string name="card_quantitiy_textview"></string>

    <string name="search_button">Search</string>

    <string name="add">+</string>
    <string name="minus">-</string>

    <string name="multiple_addRemoveCollection"></string>
    <string name="multiple_addRemove"></string>

    <string name="card_rulings"></string>
    <string name="paper_price"></string>
    <string name="online_price"></string>

    <string name="img">an img</string>

    <string name="title_activity_card_description">CardDescription</string>

    <string name="back_button">Back</string>


    <string name="Name">Snapcaster Mage</string>
    <string name="Expansion">ISD</string>
    <string name="Format">Modern,...</string>
    <string name="Colors">Blue</string>
    <string name="Types">Creature</string>
    <string name="CMC">2</string>
    <string name="Power">2</string>
    <string name="Toughness">1</string>
    <string name="Artist">Volkan Baga</string>

    <string name="Name_text">Name:</string>
    <string name="Expansion_text">Expansion:</string>
    <string name="Format_text">Format:</string>
    <string name="Colors_text">Colors:</string>
    <string name="Types_text">Types:</string>
    <string name="CMC_text">CMC:</string>
    <string name="Power_text">Power:</string>
    <string name="Toughness_text">Toughness:</string>
    <string name="Artist_text">Artist:</string>


</resources>
